added functions on click instead of adding listeners in javascript

--- a/index.html
+++ b/index.html
@@ -14,58 +14,58 @@
                 </div>
             </div>
             <div class="row">
-                <button class="number">
+                <button class="number" onclick="numberPressed(this)">
                     7
                 </button>
-                <button class="number">
+                <button class="number" onclick="numberPressed(this)">
                     8
                 </button>
-                <button class="number">
+                <button class="number" onclick="numberPressed(this)">
                     9
                 </button>
-                <button class="operator">
+                <button class="operator" onclick="operatorPressed(this)">
                     /
                 </button>
             </div>
             <div class="row">
-                <button class="number">
+                <button class="number" onclick="numberPressed(this)">
                     4
                 </button>
-                <button class="number">
+                <button class="number" onclick="numberPressed(this)">
                     5
                 </button>
-                <button class="number">
+                <button class="number" onclick="numberPressed(this)">
                     6
                 </button>
-                <button class="operator">
+                <button class="operator" onclick="operatorPressed(this)">
                     x
                 </button>
             </div>
             <div class="row">
-                <button class="number">
+                <button class="number" onclick="numberPressed(this)">
                     1
                 </button>
-                <button class="number">
+                <button class="number" onclick="numberPressed(this)">
                     2
                 </button>
-                <button class="number">
+                <button class="number" onclick="numberPressed(this)">
                     3
                 </button>
-                <button class="operator">
+                <button class="operator" onclick="operatorPressed(this)">
                     -
                 </button>
             </div>  
             <div class="row">
-                <button class="number">
+                <button class="number" onclick="numberPressed(this)">
                     0
                 </button>
-                <button class="operator">
+                <button class="operator" onclick="operatorPressed(this)">
                     .
                 </button>
-                <button class="operator">
+                <button class="operator" onclick="operatorPressed(this)">
                     +
                 </button>
-                <button class="operator">
+                <button class="operator" onclick="operatorPressed(this)">
                     =
                 </button>
             </div>
