added clear and erase buttons. Clear is working
clear button calls to clearDisplay() function which sets the display to ''
and erase previous saved number so it can start over

--- a/index.html
+++ b/index.html
@@ -13,6 +13,14 @@
                 <div class="display">
                 </div>
             </div>
+            <div class="row largebuttons">
+                <button class="clear" onclick="clearDisplay(true)">
+                    clear
+                </button>
+                <button class="clear" onclick="eraseDisplay()">
+                    erase
+                </button>
+            </div>
             <div class="row">
                 <button class="number" onclick="numberPressed(this)">
                     7
