--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
     <div class="container">
         <div class="calculator">
             <div class="row">
-                <div class="display">
+                <div class="display" tabindex="0">
                 </div>
             </div>
             <div class="row largebuttons">
